--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -41,7 +41,9 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:src="@drawable/pedra"
-            android:layout_margin="10dp"/>
+            android:layout_margin="10dp"
+            />
+
 
         <ImageButton
             android:id="@+id/imageButtonPapel"
