--- a/app/src_old/main/res/layout/activity_main.xml
+++ b/app/src_old/main/res/layout/activity_main.xml
@@ -7,15 +7,6 @@
     android:paddingLeft="16dp"
     android:paddingRight="16dp">
 
-    <!-- <TextView
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         android:text="Hello World!"
-         app:layout_constraintBottom_toBottomOf="parent"
-         app:layout_constraintLeft_toLeftOf="parent"
-         app:layout_constraintRight_toRightOf="parent"
-         app:layout_constraintTop_toTopOf="parent" />-->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -41,8 +32,8 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
-            android:onClick="clickButtonPedra"
-            android:src="@drawable/pedra" />
+            android:src="@drawable/pedra"
+            android:onClick="clickPedra"/>
 
 
         <ImageButton
@@ -50,16 +41,16 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
-            android:onClick="clickButtonPapel"
-            android:src="@drawable/papel" />
+            android:src="@drawable/papel"
+            android:onClick="clickPapel"/>
 
         <ImageButton
             android:id="@+id/imageButtonTesoura"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
-            android:onClick="clickButtonTesoura"
-            android:src="@drawable/tesoura" />
+            android:src="@drawable/tesoura"
+            android:onClick="clickTesoura"/>
 
     </LinearLayout>
 
@@ -69,22 +60,24 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imagemJogador"
             android:layout_width="80dp"
             android:layout_height="80dp"
+
             android:layout_margin="10dp" />
 
-        <ImageView
+        <ImageButton
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="10dp"
             android:src="@drawable/x" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/imagemComputador"
             android:layout_width="80dp"
             android:layout_height="80dp"
+
             android:layout_margin="10dp" />
 
     </LinearLayout>
@@ -95,13 +88,25 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal">
 
-
         <Button
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:text="Jogar"
-            android:textSize="20dp"
             android:onClick="jogar"/>
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/resultado"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="24dp" />
     </LinearLayout>
 
 </LinearLayout>
